--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "48e73848",
+   "id": "578adaed",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "b0aecab5",
+   "id": "b317352b",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "ebff6632",
+   "id": "abeb1b7b",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "87873647",
+   "id": "102b7cf8",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "a4531cb9",
+   "id": "de56faf8",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "4d58a797",
+   "id": "313d5e8e",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "77f049d8",
+   "id": "33a73aba",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "987551c7",
+   "id": "ddd382c6",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "28512238",
+   "id": "df497a74",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "3552ea77",
+   "id": "1f0724a3",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "f1b850c3",
+   "id": "1e648631",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "28cc7479",
+   "id": "18a41eb9",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "8d271f65",
+   "id": "3de5a6d0",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "771cf0af",
+   "id": "bc6bf8ee",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "af5cf108",
+   "id": "7ec11828",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "7db07288",
+   "id": "5a9874fe",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "f197774c",
+   "id": "839612c6",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "5bc5c099",
+   "id": "d6862e6d",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "fbee7c97",
+   "id": "e06e67a3",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "9ffb94ed",
+   "id": "a0e401dc",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "236abf7b",
+   "id": "02dd81b9",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "28a7d34c",
+   "id": "25c15523",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "54750dfc",
+   "id": "af77b735",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "9273cc6d",
+   "id": "fafabdbc",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "b2909c3f",
+   "id": "d44d1608",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "c3e3a5eb",
+   "id": "4f36c045",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "46663d9b",
+   "id": "d9aec3c1",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "5a2bab9f",
+   "id": "5f5c4ee2",
    "metadata": {},
    "outputs": [
     {
@@ -933,8 +933,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "id": "cf23e78d",
+   "execution_count": 161,
+   "id": "e22f7337",
    "metadata": {},
    "outputs": [
     {
@@ -948,10 +948,10 @@
     }
    ],
    "source": [
-    "num1 = input('Enter num1: ')\n",
-    "num2 = input('Enter num2: ')\n",
+    "num1 = input('Enter num1: ').strip()\n",
+    "num2 = input('Enter num2: ').strip()\n",
     "if num1 == int(num1) and num2 == int(num2):\n",
-    "    print(f'{num1} + {num2} = {num1+num2}')\n",
+    "    print(num1 + num2)\n",
     "else:\n",
     "    print(f'{num1} is not numeric')"
    ]
@@ -959,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "212282a1",
+   "id": "d84b9959",
    "metadata": {},
    "outputs": [],
    "source": []
