--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d47b154c",
+   "id": "9c0f2f3b",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "86076504",
+   "id": "cdd004d8",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "2efa653e",
+   "id": "a995add1",
    "metadata": {},
    "outputs": [
     {
@@ -228,16 +228,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "7a0c3458",
+   "execution_count": null,
+   "id": "97e6494c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unmatched ')' (1756236227.py, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[73], line 10\u001b[0;36m\u001b[0m\n\u001b[0;31m    )\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please, enter some number: 5\n"
      ]
     }
    ],
@@ -248,16 +247,17 @@
     "\n",
     "if num1.isdigit() and num2.isdigit():\n",
     "    print(f'{num1}+{num2}')\n",
-    "elif num2.isdigit():\n",
-    "    num2 = int(num2)\n",
     "else:\n",
-    "    )"
+    "    if num1.isdigit():\n",
+    "        print(f'{num2} is not numeric')\n",
+    "    if num2.isdigit():\n",
+    "        print(f'{num1} is not numeric')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "187ca368",
+   "id": "a2734f0a",
    "metadata": {},
    "outputs": [],
    "source": []
