--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8ddd99eb",
+   "id": "34d10b8b",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5041fd78",
+   "id": "73b34a48",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d7a00f0a",
+   "id": "67838f76",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "57962ba3",
+   "id": "7de888d1",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fbf19e9d",
+   "id": "0738374b",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "08793ea7",
+   "id": "12a9d4b6",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "94128eca",
+   "id": "7932c941",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8427555c",
+   "id": "9c09a802",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "58e4c469",
+   "id": "0008efd7",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9dbf1726",
+   "id": "cb54209d",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "e1a92a2b",
+   "id": "2c25f1de",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "24d9da41",
+   "id": "ac866d93",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "e71ce34f",
+   "id": "33733008",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "8f491332",
+   "id": "d2907660",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "b2b25cef",
+   "id": "9e579372",
    "metadata": {},
    "outputs": [
     {
@@ -364,8 +364,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "9a99bf71",
+   "execution_count": 84,
+   "id": "d28873cc",
    "metadata": {},
    "outputs": [
     {
@@ -373,14 +373,14 @@
      "output_type": "stream",
      "text": [
       "Please write the first number: 3\n",
-      "Please write the second number: d\n",
-      "Bad input\n"
+      "Please write the second number: 4\n",
+      "7\n"
      ]
     }
    ],
    "source": [
-    "first=input(\"Please write the first number: \")\n",
-    "second=input(\"Please write the second number: \")\n",
+    "first=input(\"Please write the first number: \").strip()\n",
+    "second=input(\"Please write the second number: \").strip()\n",
     "\n",
     "if first.isdigit() and second.isdigit():\n",
     "    print(int(first)+ int(second))\n",
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "822082f9",
+   "id": "a132d4a6",
    "metadata": {},
    "outputs": [],
    "source": []
