--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1106e9b",
+   "id": "0c4be7f1",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0158c0af",
+   "id": "c5a48a07",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "819d3342",
+   "id": "2ec87280",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9c5f1e91",
+   "id": "fc5a6e14",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1b610d49",
+   "id": "aa26065c",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "8682d17b",
+   "id": "4d45c19f",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0690c8e2",
+   "id": "7abaae2b",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "8702fcbb",
+   "id": "29c72d4f",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "13203418",
+   "id": "6f31c6b4",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "25806b9a",
+   "id": "1fe78d0d",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "2bbc60b4",
+   "id": "2352dd05",
    "metadata": {},
    "outputs": [
     {
@@ -329,23 +329,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "39454a00",
+   "execution_count": 95,
+   "id": "64fcbec3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter first number 5\n",
-      "please enter second number 5\n",
-      "The sum of 5 and 5 is 10\n"
+      "Please enter first number 1\n",
+      "please enter second number 1\n",
+      "The sum of 1 and 1 is 2\n"
      ]
     }
    ],
    "source": [
-    "n1=input('Please enter first number ')\n",
-    "n2=input('please enter second number ')\n",
+    "n1=input('Please enter first number ').strip()\n",
+    "n2=input('please enter second number ').strip()\n",
     "if n1.isdigit() and n2.isdigit():\n",
     "    print(f'The sum of {n1} and {n2} is {int(n1) + int(n2)}')\n",
     "else:\n",
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc86c749",
+   "id": "556538a7",
    "metadata": {},
    "outputs": [],
    "source": []
