--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fc4e5944",
+   "id": "e5fca2fe",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7dcb3fd4",
+   "id": "db9d616b",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e1a0f60",
+   "id": "0993e099",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0550021b",
+   "id": "dc87015c",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "60eb74e2",
+   "id": "98bb07b6",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6463633e",
+   "id": "af0a8dba",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f18f9d85",
+   "id": "900216a0",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "88ef1fbc",
+   "id": "6fa1cabb",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "919424ea",
+   "id": "d56e6257",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ffebfa04",
+   "id": "70367a73",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c6093d8f",
+   "id": "1db73ea4",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b2d3b787",
+   "id": "c900ad3c",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "3744af2a",
+   "id": "08f384c4",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "2db3ec9e",
+   "id": "13636186",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "ad9a5558",
+   "id": "64ac3bc4",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "f8d71365",
+   "id": "86ec1035",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "02b94f02",
+   "id": "e90fde64",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "79c3d7c3",
+   "id": "7086e440",
    "metadata": {},
    "outputs": [
     {
@@ -401,8 +401,8 @@
     }
    ],
    "source": [
-    "n1 = input('Enter first number: ')\n",
-    "n2 = input('Enter second number: ')\n",
+    "n1 = input('Enter first number: ').strip()\n",
+    "n2 = input('Enter second number: ').strip()\n",
     "\n",
     "if n1.isdigit() and n2.isdigit():\n",
     "    print(int(n1)+int(n2))\n",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8983fa3",
+   "id": "b4ece6cf",
    "metadata": {},
    "outputs": [],
    "source": []
