--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9c0f2f3b",
+   "id": "724f6404",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "cdd004d8",
+   "id": "063481a0",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "a995add1",
+   "id": "7e151d1b",
    "metadata": {},
    "outputs": [
     {
@@ -228,15 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "97e6494c",
+   "execution_count": 79,
+   "id": "f9f29b1e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please, enter some number: 5\n"
+      "please, enter some number: 5\n",
+      "please, enter some number: 5\n",
+      "5 + 5 = 10\n"
      ]
     }
    ],
@@ -244,9 +246,9 @@
     "#Adding numbers\n",
     "num1 = input('please, enter some number: ')\n",
     "num2 = input('please, enter some number: ')\n",
-    "\n",
+    "result = int(num1) + int(num2)\n",
     "if num1.isdigit() and num2.isdigit():\n",
-    "    print(f'{num1}+{num2}')\n",
+    "    print(f'{num1} + {num2} = {result}')\n",
     "else:\n",
     "    if num1.isdigit():\n",
     "        print(f'{num2} is not numeric')\n",
@@ -257,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2734f0a",
+   "id": "47c9bc8f",
    "metadata": {},
    "outputs": [],
    "source": []
