--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "58177f71",
+   "id": "9dbe6993",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "666bd04d",
+   "id": "d85f0728",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "88544fa6",
+   "id": "ae5a188a",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "16353bfc",
+   "id": "0b41f65b",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9a2adc93",
+   "id": "17242921",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3045ba32",
+   "id": "75ed023e",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b077b168",
+   "id": "43e919a9",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "137dca13",
+   "id": "9182acf0",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "186395b7",
+   "id": "654cf662",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a1c4408",
+   "id": "5b3d84af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "33e4ec50",
+   "id": "6714fd14",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "0862962e",
+   "id": "8fa69e9e",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "8ef3ff44",
+   "id": "e31f19bb",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "e22b0ef2",
+   "id": "1e483b91",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d2f72ba",
+   "id": "0029b618",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "2cad8e97",
+   "id": "1df48702",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "0f81983f",
+   "id": "fd1e1d6f",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "58a5456b",
+   "id": "2ebe40b5",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "6582fbbb",
+   "id": "14738cbe",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "d585bd9a",
+   "id": "c790df63",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "e72eb276",
+   "id": "8c07983d",
    "metadata": {},
    "outputs": [
     {
@@ -440,8 +440,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
-   "id": "4a3bea56",
+   "execution_count": 183,
+   "id": "f594a838",
    "metadata": {},
    "outputs": [
     {
@@ -460,16 +460,16 @@
     "\n",
     "if number1.isdigit() and number2.isdigit():\n",
     "    print(f\"The sum of {number1} and {number2} is {int(number1) + int(number2)}.\")\n",
-    "elif not number1.isdigit():\n",
+    "if not number1.isdigit():\n",
     "    print(\"The first entry is not a number\")\n",
-    "elif not number2.isdigit():\n",
+    "if not number2.isdigit():\n",
     "    print(\"The second entry is not a number\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4af86861",
+   "id": "2b1bcdf1",
    "metadata": {},
    "outputs": [],
    "source": []
