--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "724f6404",
+   "id": "d0798eab",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "063481a0",
+   "id": "bf50a992",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "7e151d1b",
+   "id": "86ffc39c",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "f9f29b1e",
+   "id": "8db886bf",
    "metadata": {},
    "outputs": [
     {
@@ -244,8 +244,8 @@
    ],
    "source": [
     "#Adding numbers\n",
-    "num1 = input('please, enter some number: ')\n",
-    "num2 = input('please, enter some number: ')\n",
+    "num1 = input('please, enter some number: ').strip\n",
+    "num2 = input('please, enter some number: ').strip\n",
     "result = int(num1) + int(num2)\n",
     "if num1.isdigit() and num2.isdigit():\n",
     "    print(f'{num1} + {num2} = {result}')\n",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47c9bc8f",
+   "id": "d4b16343",
    "metadata": {},
    "outputs": [],
    "source": []
