--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "1f804fce",
+   "id": "b3e3fcdc",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "c01651db",
+   "id": "944a2b4a",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "cc48494b",
+   "id": "f4940877",
    "metadata": {},
    "outputs": [
     {
@@ -254,8 +254,9 @@
    "source": [
     "number1 = input (' Enter first number: ')\n",
     "number2 = input (' Enter second number: ')\n",
+    "result = int(first) + int(second)\n",
     "if number1.isdigit() and number2.isdigit():\n",
-    "    print (int (number1 + number2))\n",
+    "    print (re)\n",
     "else:\n",
     "    print ('this is not numeric')"
    ]
@@ -263,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df69f8a5",
+   "id": "1c42fb57",
    "metadata": {},
    "outputs": [],
    "source": []
