--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9dbe6993",
+   "id": "61062675",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d85f0728",
+   "id": "ddbf8038",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ae5a188a",
+   "id": "5c1b2b52",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0b41f65b",
+   "id": "f645e590",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "17242921",
+   "id": "a383faca",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "75ed023e",
+   "id": "16cce64f",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "43e919a9",
+   "id": "e29659d1",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9182acf0",
+   "id": "2cc1db72",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "654cf662",
+   "id": "169650b6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b3d84af",
+   "id": "c89dc0b8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "6714fd14",
+   "id": "dfacd0fa",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "8fa69e9e",
+   "id": "eb3cc9a0",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "e31f19bb",
+   "id": "76c593f1",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "1e483b91",
+   "id": "6fd96d46",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0029b618",
+   "id": "3be6cd5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "1df48702",
+   "id": "cfb0ec17",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "fd1e1d6f",
+   "id": "9dbc1dbf",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "2ebe40b5",
+   "id": "b4fdbb0e",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "14738cbe",
+   "id": "2e7fcb3b",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "c790df63",
+   "id": "937c59b0",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "8c07983d",
+   "id": "cbad68a5",
    "metadata": {},
    "outputs": [
     {
@@ -440,17 +440,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "id": "f594a838",
+   "execution_count": 186,
+   "id": "d54288a5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter number 1: 10\n",
-      "Enter number 2: 20\n",
-      "The sum of 10 and 20 is 30.\n"
+      "Enter number 1: dog\n",
+      "Enter number 2: boy\n",
+      "dog is not a number\n",
+      "boy is not a number\n"
      ]
     }
    ],
@@ -461,15 +462,15 @@
     "if number1.isdigit() and number2.isdigit():\n",
     "    print(f\"The sum of {number1} and {number2} is {int(number1) + int(number2)}.\")\n",
     "if not number1.isdigit():\n",
-    "    print(\"The first entry is not a number\")\n",
+    "    print(f\"{number1} is not a number\")\n",
     "if not number2.isdigit():\n",
-    "    print(\"The second entry is not a number\")"
+    "    print(f\"{number2} is not a number\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b1bcdf1",
+   "id": "deaa1eda",
    "metadata": {},
    "outputs": [],
    "source": []
