--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d0798eab",
+   "id": "71ce5b50",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "bf50a992",
+   "id": "cd3cd908",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "86ffc39c",
+   "id": "7481ea18",
    "metadata": {},
    "outputs": [
     {
@@ -228,25 +228,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "8db886bf",
+   "execution_count": 81,
+   "id": "5e0477e6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please, enter some number: 5\n",
-      "please, enter some number: 5\n",
-      "5 + 5 = 10\n"
+      "please, enter some number: gg\n",
+      "please, enter some number: 55\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'gg'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[81], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m num1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplease, enter some number: \u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[1;32m      3\u001b[0m num2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplease, enter some number: \u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[0;32m----> 4\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnum1\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mint\u001b[39m(num2)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m num1\u001b[38;5;241m.\u001b[39misdigit() \u001b[38;5;129;01mand\u001b[39;00m num2\u001b[38;5;241m.\u001b[39misdigit():\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum1\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m + \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum2\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresult\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'gg'"
      ]
     }
    ],
    "source": [
     "#Adding numbers\n",
-    "num1 = input('please, enter some number: ').strip\n",
-    "num2 = input('please, enter some number: ').strip\n",
-    "result = int(num1) + int(num2)\n",
+    "num1 = input('please, enter some number: ').strip()\n",
+    "num2 = input('please, enter some number: ').strip()\n",
+    "\n",
     "if num1.isdigit() and num2.isdigit():\n",
     "    print(f'{num1} + {num2} = {result}')\n",
     "else:\n",
@@ -259,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4b16343",
+   "id": "f54f0256",
    "metadata": {},
    "outputs": [],
    "source": []
