--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "b3e3fcdc",
+   "id": "71c91cce",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "944a2b4a",
+   "id": "fe37513b",
    "metadata": {},
    "outputs": [
     {
@@ -237,26 +237,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "f4940877",
+   "execution_count": 70,
+   "id": "9eaa7873",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Enter first number: 123\n",
-      " Enter second number: 123\n",
-      "123123\n"
+      " Enter first number: 13\n",
+      " Enter second number: 15\n",
+      "28\n"
      ]
     }
    ],
    "source": [
     "number1 = input (' Enter first number: ')\n",
     "number2 = input (' Enter second number: ')\n",
-    "result = int(first) + int(second)\n",
+    "result = int(number1) + int(number2)\n",
     "if number1.isdigit() and number2.isdigit():\n",
-    "    print (re)\n",
+    "    print (result)\n",
     "else:\n",
     "    print ('this is not numeric')"
    ]
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c42fb57",
+   "id": "6ed26e79",
    "metadata": {},
    "outputs": [],
    "source": []
